fix: fix inspector paginator CSS issue where paginator_info overlap section_id info

--- a/core/inspector/css/inspector.less
+++ b/core/inspector/css/inspector.less
@@ -58,6 +58,11 @@
 					top: 1rem;
 				}
 			}
+
+			// forces line break to allow view section_id at right side
+			.paginator_info {
+				width: 100%;
+			}
 		}
 
 		// selection_info
